--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title></title>
   <link rel="stylesheet" href="./dist/app.css">
 </head>
-<body>
+<body class="body">
   <div id="root" />
   <script src="./dist/app.js"></script>
 </html>
